--- a/auth_app/templates/registration/_header.html
+++ b/auth_app/templates/registration/_header.html
@@ -22,7 +22,7 @@
 
         {% else %}
           <li class="nav-item m-1">
-            <a class="nav-link" href="{% url 'expenses_list' %}">ホーム</a>
+            <a class="nav-link" href="{% url 'expense_list' %}">ホーム</a>
           </li>
           <li class="nav-item m-1">
             <a class="nav-link" href="{% url 'my_page' user.pk %}">マイページ</a>
