--- a/app/templates/app/_header.html
+++ b/app/templates/app/_header.html
@@ -9,9 +9,9 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item m-1">
-          <a class="nav-link" href="/top/">トップ</a>
-        </li>
+          <li class="nav-item m-1">
+            <a class="nav-link" href="{% url 'my_page' user.pk %}">マイページ</a>
+          </li>
         <li class="nav-item m-1">
           <a class="nav-link" href="{% url 'expense_list' %}">支出管理</a>
         </li>
