--- a/auth_app/templates/registration/my_page.html
+++ b/auth_app/templates/registration/my_page.html
@@ -38,18 +38,20 @@
     </tbody>
   </table>
 
+  {% if user.is_superuser or user.is_staff %}
   <!-- 権限 -->
-  <div class="row mt-4">
-    <div class="col"><h4>■　権限</h4></div>
-  </div>
-  <table class="table table-bordered">
-    <tbody>
-      <tr>
-        <td>管理者権限</td>
-        <td>{{ user.is_superuser }}</td>
-      </tr>
-    </tbody>
-  </table>
+    <div class="row mt-4">
+      <div class="col"><h4>■　権限</h4></div>
+    </div>
+    <table class="table table-bordered">
+      <tbody>
+        <tr>
+          <td>管理者権限</td>
+          <td>{{ user.is_superuser }}</td>
+        </tr>
+      </tbody>
+    </table>
+  {% endif %}
 
 
 </div>
