問い合わせ機能の作成

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -13,15 +13,21 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{% static 'app/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'app/footer.css' %}">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   
+    {% block extra_css %}{% endblock %}
    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
+    <!-- Custom JavaScript -->
+    <script src="{% static 'app/app.js' %}"></script>
 
   </head>
   <body>
@@ -43,14 +49,36 @@
           こんにちは！ {{ user.username }} さん
         {% endif %}
     </div>
-    {% for message in messages %}
-        <div {% if message.tags %}class="{{ message.tags }}"{% endif %}>
-            {{ message }}
+
+    <!-- 成功/エラーダイアログ -->
+    {% if messages %}
+    <div id="messageDialog" class="message-dialog-overlay">
+        <div class="message-dialog">
+            {% for message in messages %}
+            <div class="message-dialog-content {{ message.tags }}">
+                <div class="message-icon">
+                    {% if message.tags == 'success' %}
+                        <i class="fas fa-check-circle"></i>
+                    {% elif message.tags == 'error' %}
+                        <i class="fas fa-exclamation-circle"></i>
+                    {% elif message.tags == 'warning' %}
+                        <i class="fas fa-exclamation-triangle"></i>
+                    {% else %}
+                        <i class="fas fa-info-circle"></i>
+                    {% endif %}
+                </div>
+                <div class="message-text">{{ message }}</div>
+                <button class="message-close-btn" onclick="closeMessageDialog()">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            {% endfor %}
         </div>
-    {% endfor %}
-    
+    </div>
+    {% endif %}
+
     {% block content %}{% endblock %}
 
-    {% comment %} {% include "app/_hooter.html" %} {% endcomment %}
+    {% include "app/_footer.html" %}
   </body>
 </html>
