--- a/app/templates/app/_footer.html
+++ b/app/templates/app/_footer.html
@@ -1,11 +1,10 @@
-<!-- footer.html -->
+{% load static %}
 
-<div style="background-color: #333; color: #fff; padding: 10px; text-align: center; position: relative; bottom: 0; width: 100%;">
-    <div style="margin-bottom: 10px;">
-        {% comment %} <a href="/about/" style="color: #fff; margin-right: 15px;">About Us</a> {% endcomment %}
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdce0o4KWU-qX8D082sGHAbwbD24cxwvFNT_DG_KJ4Sd6Unig/viewform?usp=sf_link" style="color: #fff; margin-right: 15px;">お問い合わせ</a>
-        {% comment %} <a href="/faq/" style="color: #fff;">FAQ</a> {% endcomment %}
-
-        &copy; 2024 . All rights reserved.
+<!-- フッター -->
+<footer class="site-footer">
+    <div class="footer-content">
+        <a href="{% url 'contact' %}">お問い合わせ</a>
+        <span class="footer-divider">|</span>
+        <span>&copy; 2025 All rights reserved.</span>
     </div>
-</div>
+</footer>
